@@ -1,4 +1,10 @@
-2010-10-30 Richard Frith-Macdonald  <rfm@gnu.org>
+2010-10-01 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSIOThreadPool.h:
+	* GSIOThreadPool.m:
+	Add new methed class for pooling threads to handle I/O and timers.
+
+2010-09-30 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSThreadPool.h:
 	* GSThreadPool.m:
